[metadata]
name = llterm
version = 1.0.1
author = Pinak Paliwal
author_email = pinakpaliwal@gmail.com
description = A way to run LLMs in your terminal (using LangChain)
long_description = file: README.md, LICENSE.md
keywords = LLM, LangChain, NVIDIA
license = University of Illinois/NCSA

[options]
packages = llterm
install_requires = 
    inquirerpy
    langchain_nvidia_ai_endpoints
    mistune

[options.entry_points]
console_scripts =
    llterm = llterm.main:main